// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it can be given colors props 1`] = `
style = Object {}

<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#33B7EB",
        "borderColor": "#33B7EB",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "blue",
        "borderColor": "gray",
        "color": "white",
      },
      undefined,
    ]
  }
/>
`;

exports[`it renders correctly 1`] = `
style = Object {}

<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#33B7EB",
        "borderColor": "#33B7EB",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {},
      undefined,
    ]
  }
/>
`;
